--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@ h4 {
     font-weight: normal;
 }
 
+.description{
+    text-align:justify;
+}
+
+
 .question-container {
     background-color: #E3CAA5;
     border-radius: 10px;
@@ -53,10 +58,6 @@ h4 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 600px;
-    margin-left:auto;
-    margin-right:auto;
-    
 }
 
 .button-container {
